# inventory-system

./: CHANGELOG.md  INSTALL.md  Makefile  README.md  TODO.md  pyproject.toml
src/inventory_system/: __init__.py  api_server.py  chat_server.py  cli.py  parser.py
src/inventory_system/templates/: aliases.json.template  search.html
systemd/: furuset.conf.example  inventory-api@.service  inventory-chat.service  inventory-web.service  inventory-web@.service
tests/: test_api_server.py
