[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "inventory-system"
dynamic = ["version"]
description = "A flexible markdown-based inventory management system"
readme = "README.md"
requires-python = ">=3.14,<4.0"
authors = [
    {name = "Tobias"}
]

[project.scripts]
inventory-system = "inventory_system.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
inventory_system = ["templates/*"]

[tool.setuptools_scm]
version_file = "src/inventory_system/_version.py"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
